# confluencia

./: .gitignore  CITATION.cff  Dockerfile  INTEGRATION_SUMMARY.md  LICENSE  README.md  RUNTIME_SETUP_README.md  build_setup_generic.ps1  docker-compose.yml  pyproject.toml  requirements-shared-denoise.txt  requirements-shared-full.txt  requirements-shared-minimal.txt  requirements-shared.txt  run.bat  run_setup.py
benchmarks/: __init__.py  ablation.py  baselines.py  baselines_288k_binary.py  clinical_validation.py  cross_validation_stability.py  deepchem_comparison.py  esm2_8m_mhc_joint.py  esm2_comparison.py  fetch_external_data.py  mamba_fix.py  mhc_288k_benchmark.py  mhc_benchmark.py  mhcflurry_comparison.py  netmhcpan_comparison.py  netmhcpan_direct.py  netmhcpan_esm2_benchmark.py  netmhcpan_expanded.py  quick_benchmark.py  rerun_all_experiments.py  rerun_fast.py  rnactm_dose_optimization.py  rnactm_pk_validation.py  rnactm_sensitivity.py  run_all.py  sample_sensitivity.py  sequence_split.py  sprint_092.py  sprint_final.py  stat_tests.py  test_mamba_attention.py  test_mamba_attention_ablation.py  test_mamba_attention_direct.py  test_mamba_attention_full.py  test_mamba_attention_tuning.py  train_drug_91k.py  train_epitope_288k.py  vae_denoise_288k.py
benchmarks/data/: chembl_heldout_bioactivity.csv  fetch_summary.json  gdsc_validation.csv  iedb_heldout_mhc.csv  literature_cases.csv  netmhcpan_heldout.csv  tccia_validation.csv
benchmarks/results/: ablation_drug.json  ablation_epitope.json  baselines_10k_test.json  baselines_288k_binary.json  baselines_drug.json  baselines_epitope.json  binding_mhc_benchmark.json  clinical_validation.json  cross_validation_stability.json  deepchem_comparison.json  esm2_comparison.json  experiment_manifest.json  extended_validation.json  mamba_attention_ablation.json  mamba_attention_enhanced.json  mamba_attention_test.json  mhc_288k_benchmark.json  mhc_288k_real_allele.json  mhc_benchmark.json  mhcflurry_comparison.json  netmhcpan_comparison.json  netmhcpan_direct.json  netmhcpan_expanded.json  rerun_all_experiments.json  rnactm_case_study.json  rnactm_case_study_report.md  rnactm_clinical_report.html  rnactm_pk_validation.json  rnactm_validation.json  sample_sensitivity_epitope.json  (+6 more)
confluencia-2.0-drug/: README.md  README.md.bak.mdtable  ROADMAP_2_2.md  app.ico.bak  app.py  build_full.ps1  confluencia-2.0-drug.code-workspace  experiment_enhancements.py  experiment_full_enhancements.py  launcher_streamlit.py  release_full.ps1  requirements.txt  server.py  test_poppk.csv
confluencia-2.0-epitope/: README.md  README.md.bak.mdtable  ROADMAP_2_2.md  app.py  build_full.ps1  build_run_decoded.txt  cloud_config.yaml  cloud_server.py  epitope_frontend.py  launcher_streamlit.py  release_full.ps1  requirements.txt  run_epitope_frontend.bat
confluencia_2_0_drug/: __init__.py
confluencia_2_0_epitope/: __init__.py
confluencia_circrna/: __init__.py
confluencia_cli/: __init__.py  cli.py  repl.py
confluencia_joint/: __init__.py  fusion_layer.py  joint_evaluator.py  joint_input.py  joint_streamlit.py  scoring.py  trained_survival_model.py
confluencia_shared/: __init__.py  agent_api.py  data_utils.py  five_gene_scorer.py  gene_signature.py  gene_signature_enhanced.py  metrics.py  models.py  moe.py  notify.py  protocols.py  training.py  ui_common.py
confluencia_studio/: __init__.py  main.py
data/: README.md  SOURCES.md  docking_real.csv  docking_synthetic.csv  drug_chembl.csv  drug_crawl_out.csv  drug_from_v2.csv  drug_from_v2_minimal.csv  drug_merged.csv  drug_screen_out.csv  epitope_crawl_out.csv  example_drug.csv  example_drug_bin.csv  example_drug_frontend_local.csv  example_epitope.csv  example_epitope_frontend_local.csv  example_epitope_frontend_unlabeled_local.csv
docs/: bioinformatics_draft.md  bioinformatics_draft_cn.md
examples/: pinn_poisson.py
paper/: supplementary_materials.md
readme/: TOTALREADME_katex_fixed.md
scripts/: _import_test_shared.py  build_confluencia2_full.ps1  build_integrated.ps1  cleanup_for_release.py  compute_embeddings_example.py  download_kaggle_denseweight.py  export_latex_tables.py  extended_validation.py  generate_figures.py  inspect_build_windows_ps1.py  install_shared_env.ps1  logistic_whitebox.py  merge_datasets.py  parse_ps_errors.ps1  release_confluencia2_full.ps1  release_integrated.ps1  setup_kaggle_and_download.ps1  train_transformer_example.py  train_transformer_full_example.py  validate_data.py
src/: __init__.py  frontend.py
studio-electron/: index.html  package.json  vite.config.ts
tests/: test_core_modules.py  test_shared_modules.py
tools/: check_table_issues.py  debug_decorative_chars.py  debug_decorative_check.py  fix_ascii_tables.py  fix_math_delimiters.py  fix_md_tables.py  inspect_table_regions.py  make_icons.py  markdown_katex_check.py  md_to_docx.py  md_to_docx_math.py  remove_decorative_rows.py
(+268 files in other folders)
