[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confluencia"
version = "2.3.0"
description = "Multi-task computational platform for circRNA drug discovery with ADMET toxicity prediction, adaptive MOE ensemble, RNACTM pharmacokinetics, and Confluencia Studio desktop IDE"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "IGEM-FBH Confluencia Team"},
]
keywords = [
    "circRNA", "drug discovery", "small-sample learning",
    "mixture-of-experts", "pharmacokinetics", "bioinformatics",
    "ADMET", "toxicity prediction", "QSAR", "toxicophore",
    "LLM", "RAG", "code completion", "IDE",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.10,<2.0",
    "streamlit>=1.30,<2.0",
    "joblib>=1.3,<2.0",
    "rich>=13.0,<14.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0,<3.0",
]
rdkit = [
    "rdkit>=2023.03",
]
full = [
    "torch>=2.0,<3.0",
    "rdkit>=2023.03",
]
benchmarks = [
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.12,<1.0",
]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-cov>=4.0,<7.0",
]

[project.scripts]
confluencia = "confluencia_cli.cli:main"

[project.urls]
Repository = "https://github.com/IGEM-FBH/confluencia"

[tool.setuptools.packages.find]
include = ["benchmarks*", "confluencia_2_0_drug*", "confluencia_2_0_epitope*", "confluencia_circrna*", "confluencia_joint*", "confluencia_shared*", "confluencia_cli*", "confluencia_studio*", "src*"]

[tool.setuptools.package-dir]
"confluencia_2_0_drug" = "confluencia-2.0-drug"
"confluencia_2_0_epitope" = "confluencia-2.0-epitope"
"confluencia_circrna" = "confluencia_circrna"
"confluencia_joint" = "confluencia_joint"
"confluencia_shared" = "confluencia_shared"
"confluencia_cli" = "confluencia_cli"
"confluencia_studio" = "confluencia_studio"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.csv"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "confluencia-2.0-epitope/tests",
    "confluencia-2.0-drug/tests",
    "confluencia_circrna/tests",
    "benchmarks",
]
